제목/링크연결

--- a/MivenProject.html
+++ b/MivenProject.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel = "stylesheet" href="style.css"> 
     <meta charset="UTF-8">
     <title>MivenProject</title>
 </head>
 <body>
-    
-</body>
-<style>
 
-    body{
-        background-image: url("배경.png");
-    }
-    
-</style>
+    <h> Member</h>
+
+    <ul>
+        <a href = /20기> 20기&nbsp;</a>
+        <a href = /21기> 21기</a>
+    </ul>
+
+</body>
 </html>
