해원/가윤언니

--- a/MivenProject.html
+++ b/MivenProject.html
@@ -8,11 +8,25 @@
 <body>
 
     <h> Member</h>
-
     <ul>
         <a href = /20기> 20기&nbsp;</a>
         <a href = /21기> 21기</a>
     </ul>
+
+    <div style = "position:relative;">
+        <img src = "사각형.png" style = "float:left; margin-top:70px; margin-left:30px; width:250px">
+        <div style = "position: absolute;">
+        <img src = "해원언니.png" style = "float:left; margin-left:30px; margin-top:170px; width:250px">
+        </div>
+    </div>
+
+    <div style = "position:relative;">
+        <img src = "사각형.png" style = "float:left; margin-top:70px; margin-left:60px; width:250px">
+        <div style = "position: absolute;">
+        <img src = "가윤언니.png" style = "float:left; margin-left:340px; margin-top:170px; width:250px">
+        </div>
+    </div>
+
 
 </body>
 </html>
