20기, 21기 사진 배경

--- a/20기.html
+++ b/20기.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="20기.css"> 
     <meta charset="UTF-8">
-    <title>MivenProject</title>
+    <title>20기</title>
 </head>
 <body>
-
     <h>Member</h>
 
     <ul>
@@ -39,7 +38,6 @@
         <img class="image9" src="사각형.png" alt="사각형">
 
         <img class="image10" src="채원언니.png" alt="채원언니">
-
     </div>
 
 </body>
