--- a/21기.html
+++ b/21기.html
@@ -22,7 +22,7 @@
 
         <img class="image3" src="사각형.png" alt="사각형">
 
-        <img class="image4" src="김예나1.png" alt="김예나">
+        <img class="image4" src="김예나2.png" alt="김예나">
 
         <img class="image11" src="사각형.png" alt="사각형">
 
@@ -34,7 +34,7 @@
      
         <img class="image5" src="사각형.png" alt="사각형">
         
-        <img class="image6" src="연아윤.png" alt="연아윤">
+        <img class="image6" src="연아윤1.png" alt="연아윤">
 
         <img class="image7" src="사각형.png" alt="사각형">
 
