--- a/Apply.html
+++ b/Apply.html
@@ -3,10 +3,25 @@
 <head>
     <link rel="stylesheet" href="Apply.css"> 
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apply</title>
 </head>
 
 <body>
-    
+    <div id="video-background">
+        <video autoplay muted loop>
+           <source src="바다 배경.mp4">
+       </div>
+       <div id="content">
+
+<div class = "centered-text">
+    <h3>DO YOU WANT TO JOIN OUR CLUB?</h3>
+</div>
+
+<div class = "centered-text">
+    <p>Miven과 함께 할 22기 Gardeners를 찾습니다.
+    22기가 될 기회를 놓치지 마세요.</p>
+</div>
+
 </body>
 </html>
