--- a/MivenProject.html
+++ b/MivenProject.html
@@ -6,13 +6,18 @@
     <title>Member</title>
 </head>
 <body>
+     <div id="video-background">
+         <video autoplay muted loop>
+            <source src="바다 배경.mp4">
+        </div>
+        <div id="content">
 
     <h>Member</h>
 
-    <!-- <ul>
-        <a href="20기.html">20기&nbsp;</a>
-        <a href="21기.html">21기</a>
-    </ul> -->
+    <ul>
+        <a>20기&nbsp;</a>
+        <a>21기</a>
+    </ul>
 
     <div class="container1">
      
