--- a/Apply.html
+++ b/Apply.html
@@ -18,10 +18,12 @@
     <h3>DO YOU WANT TO JOIN OUR CLUB?</h3>
 </div>
 
-<div class = "centered-text">
-    <p>Miven과 함께 할 22기 Gardeners를 찾습니다.
-    22기가 될 기회를 놓치지 마세요.</p>
+<div class = "centered-text1">
+    <p>Miven과 함께 할 22기 Gardeners를 찾습니다.</p>
+    <p>22기가 될 기회를 놓치지 마세요.</p>
 </div>
 
+
+<p class = "pig"></p>
 </body>
 </html>
