--- a/Apply3.html
+++ b/Apply3.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="Apply.css"> 
+    <link rel="stylesheet" href="Apply3.css"> 
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apply</title>
+    <title>Apply3</title>
 </head>
 
 <body>
@@ -26,7 +25,15 @@
     <p>@2024.miven</p>
 </div>
 
-
 <p class = "pig"></p>
+
+<div class = "container">
+<img src="Home.png" alt="홈버튼">
+</div>
+
+<div class = "home">
+    <h6>HOME</h6>
+</div>
+
 </body>
 </html>
