--- a/MivenProject.html
+++ b/MivenProject.html
@@ -114,7 +114,7 @@
         <img class="image22" src="조혜원.png" alt="조혜원">
 
         <div class = "jo">조&nbsp;혜&nbsp;원</div>
-        <div class = "h">New&nbsp;media&nbsp;web&nbsp;Design</div>
+        <div class = "h">New&nbsp;media&nbsp;Design</div>
 
     </div>
         </div>
