--- a/Apply2.html
+++ b/Apply2.html
@@ -24,6 +24,10 @@
         <img src = "school.png" alt = "school image">
     </div>
 
+    <div class = "image-number">
+        <img src = "number.png" alt = "number image">
+    </div>
+
     <div class = "image-support">
         <img src = "지원동기.png" alt = "support image">
     </div>
@@ -44,7 +48,41 @@
         <img src = "제출.png" alt = "finish image">
     </div>
 
+    <div class = "name">
+        <p>이름 :</p>
+    </div>
 
+    <div class = "school">
+        <p>학번 :</p>
+    </div>
+
+    <div class = "number">
+        <p>연락처 :</p>
+    </div>
+
+    <div class = "e-mail">
+        <p>e-mail :</p>
+    </div>
+
+    <div class = "support">
+        <p>지원동기 :</p>
+    </div>
+
+    <div class = "self">
+        <p>자기소개 :</p>
+    </div>
+
+    <div class = "strong">
+        <p>강점/약점 :</p>
+    </div>
+
+    <div class = "finish">
+        <p>제출하기<a href></a></p>
+    </div>
+
+    <div class = "bo">
+        <p>임시저장<a href></a></p>
+    </div>
 
 </body>
 </html>
